NPOTDB bug 305096 - schema validation does not handle inheritance of simple types